# VLM-OCR-Benchmark

./: .gitignore  .pctx.toml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  app.py  pyproject.toml
.claude/: CLAUDE.md
config/: default.yaml
models/.claude/: CLAUDE.md
models/model_chandra_ocr/: LICENSE  pyproject.toml
models/model_chandra_ocr/src/model_chandra_ocr/: __init__.py  __main__.py  worker.py
models/model_chandra_ocr/src/model_chandra_ocr/utils/: __init__.py  image_utils.py  postprocess.py  prompts.py
models/model_dots_mocr/: pyproject.toml
models/model_dots_mocr/src/model_dots_mocr/: __init__.py  __main__.py  worker.py
models/model_dots_mocr/src/model_dots_mocr/utils/: __init__.py  consts.py  image_utils.py  prompts.py
models/model_dots_ocr/: pyproject.toml
models/model_dots_ocr/src/model_dots_ocr/: __init__.py  __main__.py  worker.py
models/model_dots_ocr/src/model_dots_ocr/utils/: __init__.py  consts.py  image_utils.py  prompts.py
models/model_glm_ocr/: pyproject.toml
models/model_glm_ocr/src/glmocr/: __init__.py  config.py
models/model_glm_ocr/src/glmocr/layout/: __init__.py  base.py  layout_detector.py
models/model_glm_ocr/src/glmocr/postprocess/: base_post_processor.py  result_formatter.py
models/model_glm_ocr/src/glmocr/utils/: __init__.py  image_utils.py  layout_postprocess_utils.py  logging.py  result_postprocess_utils.py  visualization_utils.py
models/model_glm_ocr/src/model_glm_ocr/: __init__.py  __main__.py  worker.py
models/model_infinity_parser/: pyproject.toml
models/model_infinity_parser/src/model_infinity_parser/: __init__.py  __main__.py  worker.py
models/model_infinity_parser/src/model_infinity_parser/utils/: prompt.py
models/model_infinity_parser2/: pyproject.toml
models/model_infinity_parser2/src/model_infinity_parser2/: __init__.py  __main__.py  worker.py
models/model_infinity_parser2/src/model_infinity_parser2/utils/: __init__.py  postprocess.py  prompts.py
models/model_lighton_ocr2/: pyproject.toml
models/model_lighton_ocr2/src/model_lighton_ocr2/: __init__.py  __main__.py  worker.py
models/model_lighton_ocr2/src/model_lighton_ocr2/utils/: __init__.py  postprocess.py
models/model_monkey_ocr/: pyproject.toml
models/model_monkey_ocr/src/model_monkey_ocr/: __init__.py  __main__.py  worker.py
models/model_nanonets_ocr/: LICENSE  pyproject.toml
models/model_nanonets_ocr/src/model_nanonets_ocr/: __init__.py  __main__.py  worker.py
models/model_olmocr/: pyproject.toml
models/model_olmocr/src/model_olmocr/: __init__.py  __main__.py  worker.py
models/model_paddle_ocr_vl/: pyproject.toml
models/model_paddle_ocr_vl/src/model_paddle_ocr_vl/: __init__.py  __main__.py  worker.py
models/model_qwen35/: .gitignore  README.md  pyproject.toml  qwen35-chat-template.jinja
models/model_qwen35/src/model_qwen35/: __init__.py  __main__.py  worker.py
scripts/: convert_label_studio.py  gradio_app.py  run_benchmark.py
