[project]
name = "ocr-benchmark"
requires-python = ">=3.13"
version = "0.1.0"
description = "General-purpose OCR model testing & benchmarking framework."
dependencies = [
    "ocr-core",
    "gradio>=6.12.0",
    "loguru>=0.7.3",
    "pandas>=3.0.2",
    "label-studio>=1.23.0",
    "plotly>=6.7.0",
]

[project.optional-dependencies]
gpu = ["ocr-core[gpu]"]
chinese = ["ocr-core[chinese]"]
optimal-matching = ["ocr-core[optimal-matching]"]
test = ["ocr-core[test]"]
dev = ["pre-commit>=4.0.0"]

[tool.pytest.ini_options]
testpaths = ["packages/ocr-core/tests"]
addopts = "-W ignore::DeprecationWarning:pytz.tzinfo"

[tool.coverage.run]
source = ["packages/ocr-core/src/ocr_core"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
ocr-core = { workspace = true }

[tool.isort]
profile = "black"
known_first_party = ["ocr_core"]
