[project]
name = "model-infinity-parser"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "ocr-core",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=4.46.0,<5.0.0",
    "accelerate>=1.13.0",
    "flash-attn",
    "qwen-vl-utils<=0.0.11",
    "psutil",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
ocr-core = { path = "../../packages/ocr-core" }
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.6/flash_attn-2.8.3+cu130torch2.11-cp313-cp313-win_amd64.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/model_infinity_parser"]

[tool.isort]
profile = "black"
known_first_party = ["ocr_core", "model_infinity_parser"]
