[project]
name = "model-paddle-ocr-vl"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "ocr-core",
    "flash_attn",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.4",
    "accelerate>=1.13.0",
    "psutil",
    "triton-windows<3.7",
    "einops>=0.8.2",
    "protobuf>=7.34.1",
    "sentencepiece>=0.2.1",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
ocr-core = { path = "../../packages/ocr-core" }
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.6/flash_attn-2.8.3+cu130torch2.11-cp313-cp313-win_amd64.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/model_paddle_ocr_vl"]

[tool.isort]
profile = "black"
known_first_party = ["ocr_core", "model_paddle_ocr_vl"]
