[project]
name = "model-qwen35"
version = "0.1.0"
requires-python = ">=3.13"
description = "Qwen3.5 OCR worker — llama.cpp backend with Docker lifecycle"
dependencies = [
    "ocr-core",
    "httpx>=0.27",
    "psutil>=5.9",
    "loguru>=0.7",
]

[tool.uv.sources]
ocr-core = { path = "../../packages/ocr-core" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/model_qwen35"]

[tool.isort]
profile = "black"
known_first_party = ["ocr_core"]
